Добавил все блоки на html/css

--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -1,2 +1,9 @@
 @import 'header';
-@import '_info-block';
+@import '_info';
+@import '_properties';
+@import '_heiq';
+@import '_projects';
+@import '_reasons';
+@import '_about';
+@import '_signboard';
+@import '_footer';
