--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,9 +2,9 @@ $black: #000;
 $white: #fff;
 $main: #fe5f1e;
 $background: #fff;
-$text_blue: #006ff9;
-$text_black: #212529;
-$text_gray: #6f7074;
+$blue: #006ff9;
+$black: #212529;
+$gray: #6f7074;
 $grey: #f9f9f9;
 $lightGrey: #f3f3f3;
 $content: #2c2c2c;
