--- a/src/scss/components/_info.scss
+++ b/src/scss/components/_info.scss
@@ -20,13 +20,13 @@
   }
 
   &__made {
-    color: $text_blue;
+    color: $blue;
     font-size: 14px;
   }
 
   &__title {
     font-size: 44px;
-    color: $text_black;
+    color: $black;
     margin-top: 13px;
     line-height: 52px;
   }
@@ -34,7 +34,7 @@
   &__text {
     font-size: 16px;
     line-height: 25px;
-    color: $text_gray;
+    color: $gray;
     margin-top: 15px;
   }
 
@@ -56,8 +56,8 @@
 
   &__button:last-child {
     margin-left: 30px;
-    color: $text_blue;
-    border: 1px solid $text_blue;
+    color: $blue;
+    border: 1px solid $blue;
     background-color: rgba(0, 255, 255, 0);
   }
 
