--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,5 +1,6 @@
 body {
   background-color: $background;
+  position: relative;
 }
 
 main {
@@ -7,7 +8,7 @@ main {
 }
 
 .container {
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
 }
 
