--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   height: 673px;
   padding-top: 120px;
+  position: relative;
   &__inner {
     width: 1100px;
     display: flex;
@@ -61,5 +62,11 @@
     color: #6f7074;
     font-size: 14px;
     margin-top: 30px;
+  }
+
+  &__pattern {
+    position: absolute;
+    right: 0%;
+    bottom: 0%;
   }
 }
