--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,7 @@
 .header {
+  width: 100%;
   padding: 30px 0;
+  position: fixed;
 
   &__inner {
     display: flex;
@@ -11,6 +13,8 @@
   }
 
   &__menu {
+    padding: 10px 20px;
+    background-color: $white;
   }
 
   &__items {
