--- a/src/scss/components/_heiq.scss
+++ b/src/scss/components/_heiq.scss
@@ -10,6 +10,20 @@
     width: 520px;
     height: 520px;
     position: relative;
+    margin-right: 40px;
+  }
+
+  &__block-images::after {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    width: 520px;
+    height: 520px;
+    top: -5%;
+    left: -7%;
+    border-radius: 50%;
+    background-color: $blue;
+    opacity: 0.1;
   }
 
   &__image--home {
@@ -32,6 +46,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    margin-left: 40px;
   }
 
   &__enhanced {
