--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
   padding: 60px 0px 350px 0px;
   &__title {
     color: $black;
@@ -23,10 +24,10 @@
   }
 
   &__slider-comments {
-    width: auto;
+    width: 100%;
     height: 407px;
     margin-top: 50px;
-    display: flex;
+    // display: flex;
   }
 
   &__card {
