--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -29,15 +29,14 @@
     width: 100%;
     height: 407px;
     margin-top: 50px;
-    // display: flex;
   }
 
   &__card {
-    display: flex;
+    display: flex !important;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: 0px 20px;
+    margin: 20px 20px 0px 20px;
   }
 
   &__comment {
@@ -53,7 +52,7 @@
     position: relative;
     background-color: $white;
     border-radius: 10px;
-    box-shadow: 1px 1px 30px 1px rgb(207, 207, 207);
+    box-shadow: 1px 1px 30px 1px rgb(223, 223, 223);
     font-weight: 400;
   }
 
