--- a/src/scss/components/_properties.scss
+++ b/src/scss/components/_properties.scss
@@ -78,35 +78,35 @@
   }
 
   &__card:nth-child(1) > &__icon::after {
-    content: url(../../../public/img/properties/gear.png);
+    content: url(../img/properties/gear.png);
     position: absolute;
     top: 25%;
     left: 25%;
   }
 
   &__card:nth-child(1) > &__icon::before {
-    content: url(../../../public/img/properties/arrow.png);
+    content: url(../img/properties/arrow.png);
     position: absolute;
     top: 38%;
     left: 40%;
   }
 
   &__card:nth-child(2) > &__icon::after {
-    content: url(../../../public/img/properties/arrows.png);
+    content: url(../img/properties/arrows.png);
     position: absolute;
     top: 28%;
     left: 28%;
   }
 
   &__card:nth-child(3) > &__icon::after {
-    content: url(../../../public/img/properties/semi_gear.png);
+    content: url(../img/properties/semi_gear.png);
     position: absolute;
     top: 30%;
     left: 30%;
   }
 
   &__card:nth-child(3) > &__icon::before {
-    content: url(../../../public/img/properties/magnifier.png);
+    content: url(../img/properties/magnifier.png);
     position: absolute;
     top: 40%;
     left: 40%;
