--- a/src/scss/components/_heiq.scss
+++ b/src/scss/components/_heiq.scss
@@ -6,21 +6,20 @@
     padding: 120px 0px;
   }
 
-  &__block-images {
+  &__images {
     width: 520px;
     height: 520px;
     position: relative;
-    margin-right: 40px;
   }
 
-  &__block-images::after {
+  &__images::after {
     position: absolute;
     z-index: -1;
     content: '';
-    width: 520px;
-    height: 520px;
-    top: -5%;
-    left: -7%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     border-radius: 50%;
     background-color: $blue;
     opacity: 0.1;
@@ -28,25 +27,25 @@
 
   &__image--home {
     position: absolute;
-    top: 0%;
+    top: 5%;
+    left: 7%;
     border-radius: 2px;
   }
 
   &__image--secondary {
     position: absolute;
-    top: 50%;
-    left: 30%;
+    bottom: 2%;
+    right: 10%;
     border: 2px solid #ffffff;
     border-radius: 2px;
   }
 
-  &__block-text {
-    width: 456px;
-    height: 310px;
+  &__info {
+    flex: 1 1 40%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    margin-left: 40px;
+    margin-left: 80px;
   }
 
   &__enhanced {
@@ -54,9 +53,12 @@
     font-size: 14px;
     line-height: 18px;
     font-weight: 600;
+    letter-spacing: 2px;
+    text-transform: uppercase;
   }
 
   &__title {
+    margin-top: 14px;
     color: $black;
     font-size: 26px;
     line-height: 36px;
@@ -64,6 +66,7 @@
   }
 
   &__text {
+    margin-top: 16px;
     color: #6f7074;
     font-size: 15px;
     line-height: 28px;
@@ -71,6 +74,7 @@
   }
 
   &__link {
+    margin-top: 35px;
     color: $black;
     font-size: 16px;
     line-height: 15px;
