--- a/src/scss/components/_reasons.scss
+++ b/src/scss/components/_reasons.scss
@@ -1,21 +1,20 @@
 .reasons {
   &__inner {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding-bottom: 80px;
   }
 
   &__block-text {
-    width: 454px;
-    height: auto;
+    margin-left: 70px;
   }
 
   &__title {
+    text-transform: capitalize;
     font-size: 36px;
     line-height: 44px;
     color: $black;
-    width: 309px;
     font-weight: 600;
   }
 
@@ -27,9 +26,8 @@
     color: #6f7074;
     display: flex;
     align-items: center;
-    width: 431px;
     margin-top: 20px;
-    line-height: 20px;
+    line-height: 22px;
     font-weight: 300;
   }
 
