--- a/src/scss/components/_signboard.scss
+++ b/src/scss/components/_signboard.scss
@@ -10,7 +10,7 @@
   top: 96%;
   left: 21%;
   z-index: 5;
-  background-color: $blue;
+  background-image: url(../img/signboard/signboard_wrapper.png);
   &__title {
     width: 878px;
     text-align: center;
