--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -8,6 +8,10 @@
   height: 673px;
   padding-top: 120px;
   position: relative;
+  background-image: url(../img/footer/pattern.png);
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: 100%;
   &__inner {
     width: 1100px;
     display: flex;
