--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
 
 * {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', Tahoma, sans-serif;
 }
 
 body {
