--- a/src/scss/components/_signboard.scss
+++ b/src/scss/components/_signboard.scss
@@ -1,15 +1,19 @@
 .signboard {
-  height: 327px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  position: absolute;
-  border-radius: 10px;
-  top: 96%;
-  left: 21%;
-  z-index: 5;
-  background-image: url(../img/signboard/signboard_wrapper.png);
+  &__inner {
+    height: 327px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    border-radius: 10px;
+    top: 96%;
+    left: 21%;
+    z-index: 5;
+    background-image: url(../img/signboard/signboard_wrapper.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
   &__title {
     text-transform: capitalize;
